--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
-html{
+
+*{
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
+*::selection {
+    background-color: #0095eb;
+    color: white;
+}
 
 body {
 	font-family: 'Roboto', sans-serif;
@@ -18,12 +24,24 @@ ul{
     list-style: none outside;
 }
 
+h1,h2,h3,h4,h5,h6{
+    margin-bottom: 15px;
+}
+
 /* Navbar CSS */
-nav{
-    position: relative;
-    z-index: 3;
+nav.navbar{
+    position: absolute; 
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    width: 100%;
     background-color: transparent;
 }
+
+.navbar .container{
+    max-width: 98%;
+}
+
 .top-bar{
     height: 100.8;
     width: 100vw;
@@ -43,38 +61,77 @@ nav{
     margin-right: 20px;
 }
 
+.navbar-nav{
+    font-weight: bold;
+}
+
+.nav-item2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#navbarNav ul li a{
+    color: #fff ;
+}   
+
+#Nav-item a:hover{
+    color: #44d6fe;
+}
+
+#Nav-item .nav-link.active{
+    color: #44d6fe;
+}
+
+.buy-button{
+    background-color: #2e5aa8;
+    height: 41px;
+    width: 115px;
+}
+
+
 /* Slider CSS */
 .hero-slider{
     display: flex;
+    width: 50vh;
+    right: 0;
+    position: relative;
+    margin-top: 0;
+    padding: 0;
+    top: 0;
 }
 
 .slider-container {
     position: relative;
     z-index: 1;
 	display: flex;
-    right: 0;
-	align-items: center;
+    left: 99%;
+    align-items: center;
 	justify-content: center;
 	overflow: hidden;
 	position: relative;
 	height: 100vh;
-	width: 100vw;
+	width: 50vw;
+    margin: 0;
+    padding: 0;
+    top: 0;
 }
 
 .slider-container h1 {
-	color: #fff;
+	color: #000000;
 	font-size: 100px;
 	letter-spacing: 5px;
 	position: relative;
+    left: 0;
 	z-index: 100;
 	text-align: center;
+    display: none;
 }
 
 .slider-container::after {
-	/* content: ''; */
+	content: '';
 	position: absolute;
 	top: 0;
-	/* left: 50%; */
 	height: 100%;
 	width: 50%;
 	z-index: 1;
@@ -83,13 +140,13 @@ nav{
 .slide {
 	background-size: cover;
 	background-repeat: no-repeat;
-	background-position: center center;
+	background-position: center;
 	position: absolute;
 	top: 0;
-	/* left: 50%; */
+    right: 0;
 	opacity: 0;
 	height: 100%;
-	width: 50%;
+	width: 100%;
 	transform: scale(1.15);
 	transition: opacity .6s ease;
 }
@@ -140,22 +197,32 @@ nav{
     height: 0;
     width: 100%;
     background-color: #fff;
-    transition: height 0.8s ease;
+    transition: height 0.28s ease-in;
 }
 
 .control.active::before,
-.control:hover::before{
+.control:hover::after{
     height: 100%;
 }
 
 .control.active,
-.control:hover {
+.control:hover::after {
     opacity: 1;
 }
 
 .content {
     background-repeat: no-repeat;
 }
+
+.slider-container h1 {
+	color: #050505;
+	font-size: 100px;
+	letter-spacing: 5px;
+	position: relative;
+	z-index: 10008;
+	text-align: center;
+}
+
 
 /* Content CSS */
 
@@ -173,12 +240,39 @@ nav{
 }
 
 .mcb-column{
-    /* margin: 0 1% 40px 1%; */
-    border: 14px solid black;
+    display: flex;
+    justify-content: center;
+    /* margin: 0 auto; */
+    /* border: 10px solid black; */
 }
 
 .mcb-container{
-    /* margin: 0 auto; */
+    margin: 0 auto;
+}
+
+/* Service CSS  */
+.service-section{
+    background-color: #edf3f8;
+    padding: 75px 0 75px 0;
+}
+
+.service-wrap{
+    text-align: center;
+}
+
+.service-wrap h6{
+    font-size: 20px;
+    line-height: 25px;
+    font-weight: 600;
+    letter-spacing: -1px;
+    color: #2e5aa8;
+}
+
+.service-wrap h2{
+    font-size: 45px;
+    line-height: 52px;
+    font-weight: 600;
+    color: #000;;
 }
 
 /* Footer CSS */
