--- a/contact.css
+++ b/contact.css
@@ -1,152 +1,295 @@
-*{
+html {
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
-}
-
-*::selection {
-    background-color: #0095eb;
-    color: white;
-}
-
-body {
-	font-family: 'Roboto', sans-serif;
-    overflow-x: hidden;
-    background-color: #edf3f8;
-}
-
-div{
-    display: block;
-}
-
-ul{
-    list-style: none outside;
-}
-
-
-/* Navbar CSS  */
-nav.navbar{
+  }
+  
+  
+  
+  .navbar {
     position: absolute; 
     top: 0;
-    left: 0;
-    z-index: 1000;
     width: 100%;
-    background-color: transparent;
-}
+    z-index: 10;
+  }
+  
+  
+  .bg-image {
 
-.navbar .container{
-    max-width: 98%;
-}
-
-.top-bar{
-    height: 100.8;
-    width: 100vw;
-    display: inline-block;
-}
-
-.retina{
-    padding: 20px 20px;
-    width: 188px;
-}
-
-.top-bar-left a{
-    padding: 20px 0px;
-}
-
-.navbar-left{
-    margin-right: 20px;
-}
-
-.navbar-nav{
-    font-weight: bold;
-}
-
-.nav-item2{
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
+    width: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#navbarNav ul li a{
-    color: #fff ;
-}   
-
-#Nav-item a:hover{
-    color: #44d6fe;
-}
-
-#Nav-item .nav-link.active{
-    color: #44d6fe;
-}
-
-.buy-button{
-    background-color: #2e5aa8;
-    height: 41px;
-    width: 115px;
-}
-
-/* Footer CSS */
-footer{
-    color: black;
-    background-color: inherit;
-    bottom: 0px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 15px;
-    margin-top: auto;
+    position: absolute;
+  }
+  
+  .overlay {
+    height: 100%;
     width: 100%;
+    display: flex;
     align-items: center;
-}
+    justify-content: left;
+  }
+  
+  .content {
+   
+    text-align: left;
+  
+    padding: 20px;
+    border-radius: 8px;
+    margin-left: 15%;
+    font-family: "Georgia", Helvetica, Arial, sans-serif;
+  }
+  
+  .custom-font-size {
+    font-size: 45px;
+  }
+  
+  .hover-text:hover {
+    color: rgb(150, 41, 41);
+  }
+  
+  .custom-bullets li::before {
+    content: "✓";
+    padding-right: 10px;
+    color: rgb(7, 75, 139);
+  }
+  
+  
+  .custom-color-1 {
+    color: #1539a8; 
+  }
+  
+  .custom-font-1 {
+    font-family: "Georgia", Helvetica, Arial, sans-serif;
+  }
+  
+  .no-underline {
+    text-decoration: none;
+  }
+  
+  .bg-size-contain {
+    background-image: url("/contactimg/clean-home-half-bg.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+  }
+  
+  .custom-font-2 {
+    font-family: "Georgia", Helvetica, Arial, sans-serif;
+    font-size: 77px;
+    font-weight: 500;
+  }
+  
+  
+  .grid-item img {
 
-#Footer .container{
-    max-width: 1060px;
-}
-
-footer .widgets-wrapper{
-    text-align: center;
-    padding: 100px 0 50px;
-}
-
-footer .no-line{
-    color: transparent;
-}
-
-footer a{
-    color: #2e5aa8;
-}
-.footer-copy{
-    border-top: 0.8 solid rgba(255,255,255,0.1);
-    margin-top: 30px;
-    padding: 15px 0 15px;
-}
-
-footer .footer-copy .container2{
-    max-width: 1060px;
-}
-
-footer .footer-copy .container2{
+    padding: 0px;
+  }
+  
+  .con-bg {
+    background-image: url("/contactimg/fullblue.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    
+  }
+  
+  .margin-lft {
+    margin-left: 10px;
+  }
+  /* ll------------------------------------------------------------------------------------------------------------- */
+  
+  .image-container {
     position: relative;
-    font-family: inherit;
-    margin: 0 auto;
+    width: 300px;
+    height: 300px;
+  }
+  .image-container img {
+    position: absolute;
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+  }
+  .image-container img:first-child {
+    top: 30%;
+    left: 0;
+  }
+  .image-container img:last-child {
+    bottom: 0;
+    right: 0;
+  }
+  .text-mrgn > [class*="col-"] {
+    padding-left: 0%;
+    padding-right: 0%;
+  }
+  /* footer---------------------------------------------------------------------------------------------------------------- */
+  
+  .bg-color {
+    background-color: rgb(238, 239, 240);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+  }
+  .link-bk-clr {
+    color: black;
+  }
+  
+  /* nav------------------------------------------------------------------------------------------------------------------ */
+  .color-change {
+    color: #ffffff; 
+    text-decoration: none; 
+    cursor: pointer; 
+  }
+  .color-change:hover {
+    color: #00e5ff; 
+  }
+  .color-change:active,
+  .color-change:focus {
+    color: #006aff; 
+  }
+  .icon-sz{
+    width: 2px;
+    height: auto;
+  }
+
+
+  .crd-in-padding{
+    padding: 100px;
+  }
+
+
+  .fc1{
+    color: rgb(49, 217, 255);
+
+  }
+  .fc2{
+    color: #194d96;
+  }
+
+
+
+
+
+
+  @media (max-width: 768px) {
+    .row > .col-md-6 {
+      border-end: none;
+    }
+  }
+
+
+
+
+  .custom-font-3{
+    font-size: 30px;
+  }
+
+  .custom-font-4{
+    font-size: 50px;
+  }
+
+
+  align-rght{
+    align-self: right;
+  }
+
+  .fnt{
+    font-size: 50px;
+    
+  }
+
+
+  .fnt1{
+    font-size: 50px;
+    color: #28b4e2;
+    
+  }
+
+  .fnt2{
+    color: rgb(151, 151, 151);
+  }
+
+
+.icon-sz11{
+  width: 50px;
+  height: auto;
+}
+  
+.icon-font{
+  font-family: "Georgia", Helvetica, Arial, sans-serif;
+  font-size: 40px;
+  font-weight:bold;
+  color: #194d96;
+
 }
 
-footer .column.one{
-    margin: 0 10px 0 10px;
+.image2-margin{
+  position: absolute;
+  margin-left: 30%;
+  
+  
 }
 
-footer .social-menu{
-    display: flex;
-    float: right;
-    margin-right: 20px;
-
+.imagemrgn{
+ 
+  position: absolute;
 }
 
-footer ul{
-    vertical-align: baseline;
+
+
+
+
+
+
+
+.form-container {
+  width: 40%; 
+  margin: auto;
+  padding: 2rem;
+  background-color: white;
+  border-radius: 0.5rem;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-footer .social-menu li{
-    display: block;
-    margin-right: 6px;
-    padding-right: 6px;
-    box-sizing: border-box;
+
+.form-title {
+  color: #1e3a8a;
+  font-size: 1.8rem;
+}
+.form-subtitle {
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+
+.btn-custom {
+  background-color: #1e3a8a;
+  color: white;
+  width: 100%;
+  padding: 0.75rem;
+  font-size: 1rem;
+  border: none;
+  border-radius: 0.25rem;
+  cursor: pointer;
+}
+.btn-custom:hover {
+  background-color: #17408b;
+}
+
+
+@media (max-width: 768px) {
+  .form-container {
+    width: 90%;
+  }
+  .form-row {
+    flex-direction: column;
+  }
+  .col.ml-3 {
+    margin-left: 0;
+    margin-top: 1rem;
+  }
 }
